--- a/client/app/views/widget/index.erb
+++ b/client/app/views/widget/index.erb
@@ -6,5 +6,5 @@ function loadStylesheet(url) {
     (document.getElementsByTagName('head')[0] ||
         document.getElementsByTagName('body')[0]).appendChild(link);
 }
-loadStylesheet('http://localhost:3000/stylesheets/client/styles.css')
+loadStylesheet('http://spots-of-time.s3-external-3.amazonaws.com/stylesheets/widget.css')
 document.write('<%= escape_javascript render(:partial => 'organisation_group', :locals => {:organisation_group => @organisation_group}) %>')
