--- a/client/app/views/members/welcome.html.haml
+++ b/client/app/views/members/welcome.html.haml
@@ -1,20 +1,8 @@
 -content_for :head do
-  :coffeescript
-
-    $ ->
-
-      ActivityFilter.filter('volunteering')
-    
-      $('.feature_panel_right').cycle
-        fx: 'scrollHorz',
-        speed: 'slow',
-        timeout: 0,
-        easing: 'easeOutQuint',
-        pager: '#feature_panel_nav',
-        before: (currSlideElement, nextSlideElement, options, forwardFlag) ->
-          slideNum = $(nextSlideElement).attr 'data-slide-num'
-          $('.feature_panel_info').hide()
-          $('#feature_panel_info_' + slideNum).fadeIn()
+  :javascript
+    $(document).ready(function() {
+      ActivityFilter.filterByType('volunteering');  
+    });
 
 -hidden_title "Welcome to Spots of Time"
 -no_content_row
@@ -28,9 +16,9 @@
     -if !Activity.anytime.empty?
       #activity_filter
         %span Filter activities by:
-        =#link_to_function("All", "ActivityFilter.filter('all')", :id => "activity_filter_all", :class => "active")
-        =link_to_function("Volunteering", "ActivityFilter.filter('volunteering')", :id => "activity_filter_volunteering", :class => 'active')
-        =link_to_function("Anytime anywhere", "ActivityFilter.filter('anytime')", :id => "activity_filter_anytime")
+        =#link_to_function("All", "ActivityFilter.filterByType('all')", :id => "activity_filter_all", :class => "active")
+        =link_to_function("Volunteering", "ActivityFilter.filterByType('volunteering')", :id => "activity_filter_volunteering", :class => 'active')
+        =link_to_function("Anytime anywhere", "ActivityFilter.filterByType('anytime')", :id => "activity_filter_anytime")
   .twelvecol
     .activity_grid
       -@activities.each do |activity|
