--- a/client/app/views/activities/_form.html.haml
+++ b/client/app/views/activities/_form.html.haml
@@ -3,7 +3,8 @@
     =form.input :activity_type, :label => "Type", :as => :select, :collection => Activity::TYPES, :label_method => "humanize", :value_method => "to_s", :include_blank => false, :wrapper_html => {:class => "inline-fields"}  
     =form.input :name
     =form.input :organisation_group, :collection => [["No", nil]] + OrganisationGroup.descend_by_name.map{|og| [og, og.id]}, :label => "Restrict to an Organisation Group", :include_blank => false
-    =form.input :description
+    =form.input :description, :label => "Description for volunteers"
+    =form.input :organisation_description, :label => "Description for organisations (if different)"
     =form.input :permalink_name, :label => "Permalink"
     =form.input :image, :as => :image
   =form.buttons
