--- a/client/app/views/activities/show.html.haml
+++ b/client/app/views/activities/show.html.haml
@@ -22,7 +22,7 @@
         =link_to_self(@organisation_group)
       %br.clear
       %br.clear
-    =read_more_truncate(@activity.description, :length => 1200)
+    =read_more_truncate(@activity.description_for_member(logged_in_member), :length => 1200)
     .share_box
       =render_share_link 'Share this activity with others'
     -unless @activity.documents.empty?
